--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Agenda Sek1March</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="https://imgur.com/aXwZEzh" type="image/png">
+    <link rel="icon" href="https://imgur.com/aXwZEzh.png" type="image/png">
 </head>
 <body>
     <div class="container">
